--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,16 @@
 server.error.include-message=always
 server.port=8080
 spring.output.ansi.enabled=always
+spring.mvc.pathmatch.matching-strategy=path_pattern_parser
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.enabled=false
+spring.servlet.multipart.max-file-size=1000KB
+spring.servlet.multipart.max-request-size=1000KB
+## DB
+spring.datasource.url=jdbc:postgresql://localhost:5432/simple_portfolio
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
