Add User and Session services.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.enabled=false
 spring.servlet.multipart.max-file-size=1000KB
 spring.servlet.multipart.max-request-size=1000KB
+server.url=http://localhost:8080
 ## DB
 spring.datasource.url=jdbc:postgresql://localhost:5432/simple_portfolio
 spring.datasource.username=postgres
